Initial implementation of a TFS accessor that can retrieve the configuration variables for the current test run

--- a/Projects/TfsLabAccessor2013.Tests/TfsLabAccessor2013.Tests.csproj
+++ b/Projects/TfsLabAccessor2013.Tests/TfsLabAccessor2013.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Tfs2013LabAccessorTests.cs" />
     <Compile Include="TfsTestRunPropertiesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
